
name:            jump
version:         0.0.0
cabal-version:   >= 1.8
build-type:      Simple

executable jump
    main-is: src/Main.hs
    build-depends: base >= 4 && < 5
                 , vty-ui == 1.6
                 , vty == 4.7.3
                 , yaml == 0.8.5.1
                 , vector == 0.10.9.1
                 , containers == 0.5.0.0
                 , text == 0.11.3.1
    ghc-options: -Wall -Werror

