
name:            jump
version:         0.0.0
cabal-version:   >= 1.8
build-type:      Simple

library
  exposed-modules: Jump.Data
                 , Jump.Config
                 , Jump.Venv
  hs-source-dirs: src
  build-depends: base >= 4 && < 5
               , containers >= 0.5
               , yaml >= 0.8.5
               , text >= 0.11.3

executable jump
  main-is: src/Main.hs
  build-depends: base >= 4 && < 5
               , vty-ui == 1.6
               , vty == 4.7.3
               , vector == 0.10.9.1
               , containers == 0.5.0.0
               , text == 0.11.3.1
               , time == 1.4.*
               , old-locale == 1.0.*
               , jump
  ghc-options: -Wall -Werror

